--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vmanav/node-weather#readme",
   "dependencies": {
     "ejs": "^2.6.2",
+    "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
     "request": "^2.88.0"
   }
